--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <!--  team photos -->
             <div class="team" >
               <div class="team-item image">
-                <img src="./images/Diwash.png" alt="" />
+                <img src="./Diwash.png" alt="" />
                 <div class="team-text">
                   <p></p>
                   <h3 class="heading-3">Diwash Sharma</h3>
@@ -266,7 +266,7 @@
               </div>
               <!-- team item 2 -->
               <div class="team-item image">
-                <img src="./images/mahesh 2.png" alt="" />
+                <img src="./mahesh 2.png" alt="" />
                 <div class="team-text">
                   <p></p>
                   <h3 class="heading-3">Maheshwor Acharya</h3>
@@ -275,7 +275,7 @@
               </div>
               <!-- team item 3 -->
               <div class="team-item image">
-                <img src="./images/saurabh.png" alt="" />
+                <img src="./saurabh.png" alt="" />
                 <div class="team-text">
                   <p></p>
                   <h3 class="heading-3">Saurav Bashyal</h3>
@@ -284,7 +284,7 @@
               </div>
                 <!-- team item 4-->
               <div class="team-item image">
-                <img src="./images/laxman.png" alt="" />
+                <img src="./laxman.png" alt="" />
                 <div class="team-text">
                   <p></p>
                   <h3 class="heading-3">Laxman G.C</h3>
