--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="container">
           <div class="intro-text line">
             <h1>Building a Brighter Financial Tomorrow, Together.</h1>
-            <a href="#" class="btn btn-dark">Getting Started</a>
+           <div class="intro"><a href="#" class="btn btn-dark">Getting Started</a></div>
           </div>
           <!-- CARDS -->
           <div class="intro-cards">
